[package]
name = "bevy_particle_simulation"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2" }
bevy_egui = "0.25"
bevy-inspector-egui = "0.23.4"
wgpu = "0.19.3"
serde = "1"
serde_json = "1"
rand = "0.8.5"
bytes = "1.6"
bytemuck = "1.15"
flume = "0.11"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
